k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lovetest
  labels:
    name: lovetest
    managed-by: argocd
