k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lovetest-admin
  labels:
    app: lovetest-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lovetest-admin
  template:
    metadata:
      labels:
        app: lovetest-admin
    spec:
      containers:
      - name: lovetest-admin
        image: omaticaya/lovetest-admin:v2.0.2
        ports:
        - containerPort: 80
          protocol: TCP
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "100m"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
